GH-46 fix(home): replace hero bg with video background. increase top spacing of mission section

--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -61,6 +61,30 @@
   }
 }
 
+.video-bg {
+  position: absolute;
+
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  &__video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: auto;
+    height: 100%;
+    transform: translate(-50%, -50%);
+
+    @media (min-aspect-ratio: 16/9) {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
 .hero {
   background: linear-gradient(
     180deg,
@@ -227,6 +251,8 @@
   display: flex;
 
   flex-direction: column;
+
+  margin-top: rem(60);
 
   color: $tuf-color-white;
 
